--- a/templates/table2.html
+++ b/templates/table2.html
@@ -108,6 +108,41 @@
           </a>
         </td>
           <td>
+          <a href="#" ng-click="sortType = 'bslbyEHType'; sortReverse = !sortReverse">
+          bslbyEHType
+            <span ng-show="sortType == 'bslbyEHType' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'bslbyEHType' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+          <a href="#" ng-click="sortType = 'admbyEHType'; sortReverse = !sortReverse">
+          admbyEHType
+            <span ng-show="sortType == 'admbyEHType' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'admbyEHType' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+          <a href="#" ng-click="sortType = 'perpupilbyEHTypecalc'; sortReverse = !sortReverse">
+          perpupilbyEHTypecalc
+            <span ng-show="sortType == 'perpupilbyEHTypecalc' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'perpupilbyEHTypecalc' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+          <a href="#" ng-click="sortType = 'perpupilbyEHTypedefault'; sortReverse = !sortReverse">
+          perpupilbyEHTypedefault
+            <span ng-show="sortType == 'perpupilbyEHTypedefault' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'perpupilbyEHTypedefault' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
+          <a href="#" ng-click="sortType = 'perpupilbyEHTypedifference'; sortReverse = !sortReverse">
+          perpupilbyEHTypedifference
+            <span ng-show="sortType == 'perpupilbyEHTypedifference' && !sortReverse" class="fa fa-caret-down"></span>
+            <span ng-show="sortType == 'perpupilbyEHTypedifference' && sortReverse" class="fa fa-caret-up"></span>
+          </a>
+        </td>
+          <td>
           <a href="#" ng-click="sortType = 'AOI'; sortReverse = !sortReverse">
           AOI
             <span ng-show="sortType == 'AOI' && !sortReverse" class="fa fa-caret-down"></span>
@@ -689,6 +724,11 @@
           <td>{{ roll.EntityName }}</td>
           <td>{{ roll.County }}</td>
         <td>{{ roll.EHType }}</td>
+        <td>{{ roll.bslbyEHType }}</td>
+        <td>{{ roll.admbyEHType }}</td>
+        <td>{{ roll.perpupilbyEHTypecalc }}</td>
+        <td>{{ roll.perpupilbyEHTypedefault }}</td>
+        <td>{{ roll.perpupilbyEHTypedifference }}</td>
         <td>{{ roll.AOI }}</td>
           <td>{{ roll.schooltype }}</td>
           <td>{{ roll.admbyschooltype }}</td>
